<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="kotlin.jvm.functions.Function1" />

        <import type="red.code101.app.ui.auth.LinkProvider" />

        <import type="kotlin.Unit" />

        <variable
            name="onProviderClick"
            type="Function1&lt;LinkProvider,Unit>" />

        <variable
            name="viewModel"
            type="red.code101.app.ui.account.AccountViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.account.AccountFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@drawable/ic_round_arrow_back_ios_new_24"
                app:title="@string/account" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@+id/appBarLayout"
            android:background="@color/background"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/fragment_horizontal_margin"
                android:orientation="vertical"
                android:paddingTop="16dp"
                android:paddingBottom="80dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:text="@string/authentication"
                    android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/connected" />

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:providers="@{viewModel.user.authProviders}"
                    tools:itemCount="3"
                    tools:listitem="@layout/item_auth_provider" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/other_sign_in_methods" />

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:paddingVertical="8dp"
                    app:onProviderClick="@{onProviderClick}"
                    app:providersMerge="@{viewModel.user.authProviders}"
                    tools:itemCount="2"
                    tools:listitem="@layout/item_auth_link_provider"
                    tools:spanCount="2" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_nav"
            android:gravity="center"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.signOut()}"
                android:text="@string/sign_out" />
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>